src/objects/Action__c.object
<CustomObject>
    <description>This object is used to track actions performed by end users</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Closed_Date__c</fullName>
        <label>Action Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action_Date__c</fullName>
        <label>Action Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action_Name__c</fullName>
        <label>Action Name</label>
        <picklist>
            <picklistValues>
                <fullName>Change email-address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set marketing preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reset password</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel pre-order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add entitlements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove entitlements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add credit card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove credit card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Store credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove Store credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund Store credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Get escalation update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <formula>IF ( 
     AND (
           ISPICKVAL( Status__c , &quot;Pending&quot;), 
           Today()&gt; Action_Date__c 
          ),
     Today()-Action_Date__c,
     
IF ( 
     AND (
           ISPICKVAL( Status__c , &quot;Pending&quot;), 
           Today() &lt;= Action_Date__c 
          ),
     0,

IF ( 
     AND (
           ISPICKVAL( Status__c , &quot;Completed&quot;), 
            Action_Closed_Date__c &gt; Action_Date__c 
          ),
     Action_Closed_Date__c - Action_Date__c, 0
   )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overdue_Image__c</fullName>
        <formula>IF (
      Overdue__c  = TRUE,
     IMAGE (&quot;/img/msg_icons/error24.png&quot;, &quot;Overdue&quot;), 
     IMAGE (&quot;/img/msg_icons/confirm24.png&quot;, &quot;On time&quot;)
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <controllingField>Action_Name__c</controllingField>
            <picklistValues>
                <fullName>Found the product cheaper elsewhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed their mind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied with product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encountered technical issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBC by BBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical error online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t know how to do it online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thought it would be faster to change via contact centre than online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(opt-in) Wants to receive marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(opt-in) Wants marketing but is not receiving it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(opt-out) Receives too much marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(opt-out) Didn&apos;t sign up for marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(opt-out) Felt the marketing wasn&apos;t appropriate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content not visible in My Programmes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restoring entitlements from a closed Store account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content has been refunded but is still visible in My Programmes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User has an entitlement that they shouldn’t be entitled to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit was issued but refund is required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit was issued in error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encountered issues redeeming credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up with case team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unclear on next steps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not had feedback within a period of time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem persists/is worsening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good-will gesture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product refund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refund_amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Action</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action_Name__c</columns>
        <columns>Action_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <recordTypes>
        <fullName>Action_Record_Type</fullName>
        <active>true</active>
        <label>Action Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Description_must_not_be_blank</fullName>
        <active>true</active>
        <description>Description field must not be blank</description>
        <errorConditionFormula>LEN ( Description__c ) = 0</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>Please enter a description of the action</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_cannot_be_blank</fullName>
        <active>true</active>
        <description>Reason is mandatory</description>
        <errorConditionFormula>ISPICKVAL (Reason__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>Please enter a reason</errorMessage>
    </validationRules>
</CustomObject>